Version 200: * Revamped video player digital zoom.  The old zooming behavior was somewhat jarring when beginning to zoom, because it would jump immediately from "Fit" to "1x" before operating smoothly for the rest of the scale.  In the new system, there is no more sudden jump, and you can zoom out further than 1x if the video source is larger than the viewport.   * Using a touchscreen, pinch zooming on the video player now uses UI3's digital zoom capabilities instead of zooming the entire page.     * In case this inhibits usability on some devices, the new behavior can be disabled via UI Settings > Digital Zoom > Browser Native Zoom.   * Removed some legacy digital zoom settings and added new settings related to the new zoom system.   * Digital Zoom factor is now shown in "Stats for nerds" with two decimal places precision, after the Viewport size. * Worked around an issue where layout metadata was scaled differently than expected for H.264 streams of static-layout groups. * Fixed issues that caused UI3 to sometimes load dynamic-layout groups below the minimum dimensions for a dynamic layout. * Improved clientside camera label font sizing slightly, as it was far too large on low-res streams. * Fixed issue where the group= or cam= arguments in the URL could cause two streams to be opened initially. * Default H.264 non-"VBR" streaming profiles now have quality defined between 30 and 50.  Change does not affect UI3 installations with existing settings in local storage, where quality will remain undefined. * Removed redundant "w" and "h" arguments from jpeg video requests.

--- a/ui3/ui3.css
+++ b/ui3/ui3.css
@@ -3132,6 +3132,7 @@ body + div
 	opacity: 1;
 	margin: 0px 5px 5px 0px;
 	font-size: 16px;
+	pointer-events: none;
 }
 
 .inputRequiredToPlay
